--- a/scoping.v05.html
+++ b/scoping.v05.html
@@ -9,7 +9,7 @@
     <script>
 
         for (var i = 0; i <= 10; i = i +1) { 
-            console.log("inside i: " + i)
+            console.log("inside i: " + i);
         }
 
         console.log("outside i:" + i)
@@ -17,7 +17,7 @@
 
         // Before 2015 when let and const became codified
         for (var j = 0; j <= 10; i = j +1) { 
-            console.log("inside j: " + j)
+            console.log("inside j: " + j);
         }
 
 
